--- a/style.css
+++ b/style.css
@@ -1,13 +1,33 @@
 body {
-  background-color: red;
-  color: white;
+background-image: url("https://images.unsplash.com/photo-1455099229380-7b52707e356a?dpr=1&auto=compress,format&fit=crop&w=1500&h=&q=80&cs=tinysrgb&crop=");
+background-image: cover;
+background-attachment: fixed;
 
+background-color: grey;
+color: white;
+
+}
+
+#ParaOne {
+text-align: center;
+font-family: 'fantasy', sans-serif;
+font-size: 50;
+color: purple;
+
+}
+
+#Bout{
+  src: url("https://images.unsplash.com/photo-1455099229380-7b52707e356a?dpr=1&auto=compress,format&fit=crop&w=1500&h=&q=80&cs=tinysrgb&crop=");
 }
 
 #MainTitle {
   text-align: center;
   font-family: sans-serif;
 }
+
+h1{
+  color: orange;
+  font-family: 'Arial', sans-serif;
 
 p {
   font-family: sans-serif;
