--- a/style.css
+++ b/style.css
@@ -32,3 +32,11 @@ h1{
 p {
   font-family: sans-serif;
 }
+
+#ProductP{
+  color: black;
+  font-family:sans-serif;
+  text-align: left;
+  padding: 50px;
+  
+}
