changed more css

--- a/style.css
+++ b/style.css
@@ -36,3 +36,10 @@ p {
   text-align: left;
   padding: 50px;
 }
+
+#ProductB{
+  background-image: url("https://images.unsplash.com/photo-1455099229380-7b52707e356a?dpr=1&auto=compress,format&fit=crop&w=1500&h=&q=80&cs=tinysrgb&crop=");
+  background-image: cover;
+  background-attachment: fixed;
+  background-color: grey;
+}
