--- a/style.css
+++ b/style.css
@@ -1,11 +1,51 @@
 
 body {
   background-color: black;
+  width: 100%;
 }
 
-div.container {
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+div.topnav b {
+  float: right;
+  text-align: center;
+}
+
+div.main {
     width: 100%;
     border: 1px solid black;
+    margin-top: 30px;
 }
 
 header {
