added css to button

--- a/style.css
+++ b/style.css
@@ -12,14 +12,12 @@ body {
     top: 0;
     width: 100%;
 }
-
 /* Style the links inside the navigation bar */
 div.topnav img{
   float: left;
   text-align: center;
   border: 1px solid #333;
 }
-
 .topnav a {
     float: left;
     display: block;
@@ -29,13 +27,11 @@ div.topnav img{
     text-decoration: none;
     font-size: 17px;
 }
-
 /* Change the color of links on hover */
 .topnav a:hover {
     background-color: #ddd;
     color: black;
 }
-
 /* Add a color to the active/current link */
 .topnav a.active {
     background-color: #4CAF50;
@@ -57,7 +53,6 @@ header {
     color: black;
     text-align: center;
 }
-
 footer{
   padding: 12;
   background-color: black;
@@ -66,23 +61,6 @@ footer{
   text-align: center;
 
 }
-/*
-nav {
-    float: left;
-    max-width: 160px;
-    margin: 0;
-    padding: 1em;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav ul a {
-    text-decoration: none;
-}
-*/
 article {
     margin-left: 0px;
     padding: 15em;
@@ -99,9 +77,32 @@ font-size: 50;
 color: purple;
 }
 
-#Bout{
-  src: url("https://images.unsplash.com/photo-1455099229380-7b52707e356a?dpr=1&auto=compress,format&fit=crop&w=1500&h=&q=80&cs=tinysrgb&crop=");
+.button {
+    position: relative;
+    background-color: #bdaeff;
+    border: none;
+    font-size: 28px;
+    color: #ff6680;
+    padding: 20px;
+    width: 200px;
+    text-align: center;
+    text-decoration: none;
+    overflow: hidden;
+    display: inline-block;
 }
+
+.button {border-radius: 12px;}
+
+.button:hover {
+  background-color: #ff6680;
+  color: #bdaeff;
+  cursor: pointer;
+  }
+
+.button:active {
+  background-color: white;
+  color: black;
+  }
 
 #MainTitle {
   text-align: center;
