--- a/product_style.css
+++ b/product_style.css
@@ -1,10 +1,82 @@
-#ProductP{
-  color: black;
-  font-family:sans-serif;
-  text-align: left;
-  padding: 50px;
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+/* Style the links inside the navigation bar */
+div.topnav img{
+  float: left;
+  text-align: center;
+  border: 1px solid #333;
+}
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
 }
 
-#ProductB{
-  background-color: green;
+#divProduct {
+    padding: 360;
+    background-image: url("https://images.unsplash.com/photo-1490818387583-1baba5e638af?dpr=1&auto=compress,format&fit=crop&w=1531&h=&q=80&cs=tinysrgb&crop=");
+    background-image: cover;
+    background-attachment: fixed;
+    color: black;
+    text-align: center;
+}
+
+#button {
+  align-items: center;
+  position: relative;
+}
+
+.calorieTable{
+  border:5px solid;
+  border-color: #ef3d47;
+  background-color: #ADD8E6;
+  border-radius: 5px;
+  padding-top: 0px;
+  padding-right: 3px;
+  padding-bottom: 2px;
+  padding-right:3px;
+}
+
+.label {
+    margin-bottom: 1.4em;
+}
+
+.input-inline, .inline {
+    display: inline !important;
+    width: auto !important;
+}
+
+.inCounter {
+  vertical-align: baseline;
+}
+
+.rad {
+  display: inline-block;
+  width: auto;
+  height: auto;
+}
+
+.activeText {
+  border: 5px solid;
+  background-color: #ADD8E6;
+  text-align:left;
 }
