--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 body {
   background-color: black;
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 /* Add a black background color to the top navigation */
@@ -54,9 +56,9 @@ header {
     text-align: center;
 }
 footer{
-  padding: 12;
+  padding: 10;
   background-color: black;
-  color: orange;
+  color: #FFC80A;
   clear: left;
   text-align: center;
 
@@ -111,10 +113,109 @@ color: purple;
   color: #ff6680;
 }
 
-h1{
-  color: orange;
-  font-family: 'Arial', sans-serif;
+/*CONTACT*/
+#contact {
+    height: auto;
+    position: relative;
+    justify-content: center;
+    z-index: 1;
+    overflow: hidden;
 }
-p {
-  font-family: sans-serif;
+
+#contact-content {
+    position: relative;
+    justify-content: center;
+    display: flex;
+    z-index: 2;
+    margin-top: 0%;
+    overflow: hidden;
+}
+
+#contact-info {
+    width: 50%;
+    z-index: 3;
+    text-align: left;
+    position: relative;
+}
+
+#contact-form {
+    width: 50%;
+    z-index: 3;
+    text-align: left;
+    display: block;
+}
+
+#contact-top {
+    width: 100%;
+    text-align: center;
+}
+
+#contact-title {
+    font-size: 2em;
+    z-index: 1;
+    letter-spacing: 2px;
+    padding-top: 0%;
+}
+
+.contact-stuff {
+    font-size: 1em;
+    z-index: 4;
+    margin-left: 18%;
+}
+
+#contact-info-first {
+    margin-top: 5%;
+}
+
+#contact-name-box, #contact-email-box {
+    background-color: black;
+    color: #FFC80A;
+    padding: 0.25em 0.25em;
+    outline: none;
+    outline-style: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid #FFC80A 2px;
+    width: 85%;
+}
+
+::-webkit-input-placeholder {
+    font-family: montserrat;
+}
+
+#name-elements, #email-elements {
+    width: 50%;
+    float: left;
+}
+
+#message-elements {
+    margin-top: 10%;
+}
+
+#contact-message-box {
+    background-color: transparent;
+    color: #FFC80A;
+    padding: 0.25em 0.25em;
+    outline: none;
+    outline-style: none;
+    border: solid #FFC80A 2px;
+    width: 92.5%;
+    resize: none;
+}
+
+#contact-name, #contact-email, #contact-message {
+    fontsize: 1em;
+    visibility: hidden;
+}
+
+#bottom-button {
+    width: 92.5%;
+    content-align: center;
+    padding: 0px 45%;
+}
+
+#contact-button {
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
