--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ color: purple;
     justify-content: center;
     z-index: 1;
     overflow: hidden;
+    background-color: #1b1e33;
 }
 
 #contact-content {
@@ -145,13 +146,16 @@ color: purple;
     display: block;
 }
 
-#contact-top {
+#contact-bottom {
     width: 100%;
+    font-size: 2em;
     text-align: center;
+    float: center;
 }
 
 #contact-title {
-    font-size: 2em;
+    font-size: 1.5em;
+    text-align: center;
     z-index: 1;
     letter-spacing: 2px;
     padding-top: 0%;
@@ -168,7 +172,7 @@ color: purple;
 }
 
 #contact-name-box, #contact-email-box {
-    background-color: black;
+    background-color: transparent;
     color: #FFC80A;
     padding: 0.25em 0.25em;
     outline: none;
@@ -218,4 +222,26 @@ color: purple;
 #contact-button {
     margin-top: 5%;
     margin-bottom: 5%;
+}
+
+/* copyright */
+p#copyright {
+    font-size: 50%;
+    color: #eeeeee;
+    font-weight: 300;
+    letter-spacing: 0.09375em;
+    transition-duration: 0.3s;
+}
+
+p#copyright:hover {
+    cursor: pointer;
+    color: #FFC80A;
+    transform: scale(1.05,1.05);
+    transition-duration: 0.3s;
+}
+
+#footer-copyright {
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
 }
