--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
+  font-family: Verdana;
 }
-
+/* Navbar */
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #333;
@@ -40,6 +41,7 @@ div.topnav img{
     color: white;
 }
 
+/* NavBar*/
 
 div.main {
     width: 100%;
@@ -69,14 +71,6 @@ article {
     overflow: hidden;
     color: white;
     background-color: #bdaeff;
-}
-
-
-#ParaOne {
-text-align: center;
-font-family: 'fantasy', sans-serif;
-font-size: 50;
-color: purple;
 }
 
 .button {
