--- a/style.css
+++ b/style.css
@@ -49,15 +49,16 @@ div.main {
     margin-top: 30px;
 }
 
-#pricing{
+div.pricing{
   background-color:#f2f2f2;
    color: orange;
+   margin-top: 0px;
+   padding: 0;
 }
 table#pricing, th#pricing, td#pricing {
   	color: white ;
-
   	margin-bottom: 10px ;
-  	padding: 0px ;
+  	padding: 30px ;
   }
 
   .boxes {
