--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ div.main {
     margin-top: 30px;
 }
 
+div.ppp {
+	font-size: 30px ; 
+	color: black ; 
+	
+}
+
 div.pricing{
   background-color:#f2f2f2;
    color: orange;
