--- a/style.css
+++ b/style.css
@@ -50,9 +50,9 @@ div.main {
 }
 
 div.ppp {
-	font-size: 30px ; 
+	font-size: 45px ; 
 	color: black ; 
-	
+	font-weight: 12px ; 
 }
 
 div.pricing{
