--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ article {
     background-color: #bdaeff;
 }
 div.pricing {
-background-color: yellow; 
+ background-color: #bdaeff;
 }
 
 .button {
