--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
   padding: 0;
   font-family: Verdana;
 }
+h1 {
+	color  = white ; 
+}
 /* Navbar */
 /* Add a black background color to the top navigation */
 .topnav {
@@ -78,12 +81,8 @@ article {
 }
 div.pricing {
  background-color: #bdaeff;
-
 }
 
-#h1 {
-	color  = white ; 
-}
 
 .button {
     position: relative;
