final touches to team page and fixed some resolution bugs

--- a/product_style.css
+++ b/product_style.css
@@ -39,8 +39,9 @@ div.topnav img{
 #divProduct {
     padding: 360;
     background-image: url("https://images.unsplash.com/photo-1490818387583-1baba5e638af?dpr=1&auto=compress,format&fit=crop&w=1531&h=&q=80&cs=tinysrgb&crop=");
-    background-image: cover;
+    background-size: cover;
     background-attachment: fixed;
+    background-repeat: no-repeat;
     color: black;
     text-align: center;
 }
