--- a/product_style.css
+++ b/product_style.css
@@ -38,7 +38,7 @@ div.topnav img{
 
 #divProduct {
     padding: 360;
-    background-image: url("https://images.unsplash.com/photo-1490818387583-1baba5e638af?dpr=1&auto=compress,format&fit=crop&w=1531&h=&q=80&cs=tinysrgb&crop=");
+    background-image: url("https://static.pexels.com/photos/349609/pexels-photo-349609.jpeg");
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
