--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     top: 0;
     width: 100%;
     box-shadow: 0 2px 4px 0;
+    z-index: 1;
 }
 /* Style the links inside the navigation bar */
 div.topnav img{
@@ -70,6 +71,9 @@ header {
   background-repeat: no-repeat;
   color: black;
   text-align: center;
+  opacity: 0.5;
+  z-index: 2;
+
   /*
   outline-width: 20px;
   outline-color: #ff6680;
@@ -148,6 +152,7 @@ html {
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
 }
 
 .container {
