--- a/product_style.css
+++ b/product_style.css
@@ -1,34 +1,37 @@
 body {
 margin: 0;
-font-family: Verdana;
+font-family: Arial;
 }
 
 .topnav {
-    background-color: #333;
+    background-color: #ff6680;
+    /*#333;*/
     overflow: hidden;
     position: fixed;
     top: 0;
     width: 100%;
+    box-shadow: 0 2px 4px 0;
+    z-index: 1;
 }
 /* Style the links inside the navigation bar */
 div.topnav img{
   float: left;
   text-align: center;
-  border: 1px solid #333;
 }
 .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: white;
+    /*#f2f2f2;*/
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
 }
-/* Change the color of links on hover */
+/* Change the color of links on hover #ddd*/
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: white;
+    color: gold;
 }
 /* Add a color to the active/current link */
 .topnav a.active {
@@ -44,6 +47,7 @@ div.topnav img{
     background-repeat: no-repeat;
     color: black;
     text-align: center;
+    font-family:Arial;
 }
 
 #button {
